# jupyter_ydoc

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  .yarnrc.yml  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg
.github/workflows/: auto_author_assign.yml  check-release.yml  enforce-label.yml  license-header.yml  prep-release.yml  test.yml
docs/: Makefile
docs/source/: api.md  changelog.md  conf.py  custom.md  index.md  javascript_api.rst  overview.md  python_api.rst  schema.md
docs/source/api/: index.html
javascript/: .eslintcache  .eslintrc.cjs  .prettierignore  babel.config.js  jest.config.cjs  jest.config.js  package.json  tsconfig.json  tsconfig.test.json  tsconfig.tsbuildinfo  typedoc.json
javascript/docs/: index.html  modules.html
javascript/docs/assets/: highlight.css  search.js
javascript/docs/classes/: YBaseCell.html  YCodeCell.html  YDocument.html  YFile.html  YMarkdownCell.html  YNotebook.html  YRawCell.html
javascript/docs/functions/: convertYMapEventToMapChange.html  createMutex.html  createStandaloneCell.html
javascript/docs/interfaces/: IMapChange.html  ISharedAttachmentsCell.html  ISharedBase.html  ISharedBaseCell.html  ISharedCodeCell.html  ISharedDocument.html  ISharedFile.html  ISharedMarkdownCell.html  ISharedNotebook-1.html  ISharedNotebook.IOptions.html  ISharedRawCell.html  ISharedText.html  ISharedUnrecognizedCell.html  IYText.html  SharedCell.IOptions.html
javascript/docs/modules/: ISharedNotebook.html  SharedCell.html
javascript/docs/types/: CellChange.html  Delta.html  DocumentChange.html  FileChange.html  ISharedCell.html  MapChange.html  MapChangeType.html  MapChanges.html  NotebookChange.html  SharedCell.Cell.html  SourceChange.html  StateChange.html  YCellType.html
javascript/src/: annotations.ts  api.ts  awareness.ts  index.ts  utils.ts  ycell.ts  ydocument.ts  yfile.ts  ymodels.ts  ynotebook.ts  ytext.ts
javascript/test/: ycell.spec.ts  yfile.spec.ts  ymodels.spec.ts  ynotebook.spec.ts
jupyter_ydoc/: __init__.py  _version.py  utils.py  ybasedoc.py  yblob.py  ydoc.py  yfile.py  ynotebook.py  ystdin.py  yunicode.py
scripts/: bump-version.py
tests/: conftest.py  package.json  test_pycrdt_yjs.py  test_yblob.py  test_ydocs.py  test_ynotebook.py  test_ypy_yjs.py  test_yunicode.py  utils.py  yjs_client_0.js  yjs_client_1.js
tests/files/: nb0.ipynb  nb0_1.ipynb  nb1.ipynb  plotly_renderer.ipynb
