[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[project]
name = "jupyter-ydoc"
version = "0.2.2"
description = "Document structures for collaborative editing using Ypy"
requires-python = ">=3.7"
keywords = ["jupyter", "ypy"]
dependencies = [
    "importlib_metadata >=3.6; python_version<\"3.10\"",
    "y-py >=0.5.3,<0.6.0",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.optional-dependencies]
test = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "websockets >=10.0",
    "ypy-websocket >=0.3.1,<0.4.0",
]
dev = [
    "click",
    "jupyter_releaser",
    "tbump"
]

[project.entry-points.jupyter_ydoc]
file = "jupyter_ydoc.ydoc:YFile"
notebook = "jupyter_ydoc.ydoc:YNotebook"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"

[tool.tbump.version]
current = "0.2.2"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[[tool.tbump.file]]
src = "pyproject.toml"
[[tool.tbump.file]]
src = "jupyter_ydoc/_version.py"

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[tool.check-manifest]
ignore = [".*"]

[tool.jupyter-releaser]
skip = [
    "check-links",
    "check-manifest",
]

[tool.jupyter-releaser.options]
version_cmd = "python scripts/bump-version.py"

[tool.flake8]
max-line-length = 100
