[build-system]
requires = ["hatchling>=1.10.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyter-ydoc"
dynamic = ["version"]
description = "Document structures for collaborative editing using Ypy"
requires-python = ">=3.7"
keywords = ["jupyter", "ypy"]
dependencies = [
    "importlib_metadata >=3.6; python_version<\"3.10\"",
    "y-py >=0.5.3,<0.6.0",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.optional-dependencies]
dev = [
    "click",
    "jupyter_releaser",
    "pre-commit"
]
test = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "websockets >=10.0",
    "ypy-websocket >=0.3.1,<0.4.0",
]
docs = [
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme"
]

[project.entry-points.jupyter_ydoc]
file = "jupyter_ydoc.ydoc:YFile"
notebook = "jupyter_ydoc.ydoc:YNotebook"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"
Source = "https://github.com/jupyter-server/jupyter_ydoc"

[tool.hatch.version]
source = "nodejs"
path = "javascript/package.json"

[tool.hatch.build]
exclude = ["javascript", "!javascript/package.json"]

[tool.hatch.build.hooks.version]
path = "jupyter_ydoc/_version.py"

[tool.check-manifest]
ignore = [".*"]

[tool.jupyter-releaser]
skip = [
    "check-links",
    "check-manifest",
]

[tool.jupyter-releaser.hooks]
before-build-npm = ["cd javascript && yarn && yarn build"]
before-bump-version = ["pip install -e .[dev]"]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.flake8]
max-line-length = 100
