# Copyright (c) Jupyter Development Team.
# Distributed under the terms of the Modified BSD License.

[build-system]
requires = ["hatchling>=1.10.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyter-ydoc"
dynamic = ["version"]
description = "Document structures for collaborative editing using Ypy"
requires-python = ">=3.8"
keywords = ["jupyter", "pycrdt", "yjs"]
dependencies = [
    "importlib_metadata >=3.6; python_version<'3.10'",
    "pycrdt >=0.10.1,<0.11.0",
]

[[project.authors]]
name = "Jupyter Development Team"
email = "jupyter@googlegroups.com"

[project.optional-dependencies]
dev = [
    "click",
    "jupyter_releaser",
    "pre-commit"
]
test = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "httpx-ws >=0.5.2",
    "hypercorn >=0.16.0",
    "pycrdt-websocket >=0.15.0,<0.16.0",
]
docs = [
    "sphinx",
    "myst-parser",
    "pydata-sphinx-theme"
]

[project.entry-points.jupyter_ydoc]
blob = "jupyter_ydoc.yblob:YBlob"
file = "jupyter_ydoc.yfile:YFile"
unicode = "jupyter_ydoc.yunicode:YUnicode"
notebook = "jupyter_ydoc.ynotebook:YNotebook"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "BSD 3-Clause License"

[project.urls]
Homepage = "https://jupyter.org"
Source = "https://github.com/jupyter-server/jupyter_ydoc"

[tool.hatch.version]
source = "nodejs"
path = "javascript/package.json"

[tool.hatch.build]
exclude = ["javascript", "!javascript/package.json"]

[tool.hatch.build.hooks.version]
path = "jupyter_ydoc/_version.py"

[tool.check-manifest]
ignore = [".*"]

[tool.jupyter-releaser]
skip = [
    "check-links",
    "check-manifest",
]

[tool.jupyter-releaser.hooks]
before-build-npm = ["cd javascript && yarn && yarn build"]
before-bump-version = ["pip install -e .[dev]"]

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.ruff]
line-length = 100
lint.select = [
    "ASYNC",        # flake8-async
    "E", "F", "W",  # default Flake8
    "G",            # flake8-logging-format
    "I",            # isort
    "ISC",          # flake8-implicit-str-concat
    "PGH",          # pygrep-hooks
    "RUF100",       # unused noqa (yesqa)
    "UP",           # pyupgrade
]
