[metadata]
name = jupyter_ydoc
version = attr: jupyter_ydoc.__version__
description = Document structures for collaborative editing using Ypy
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE
author = David Brochart
author_email = david.brochart@gmail.com
url = https://github.com/jupyter-server/jupyter_ydoc
platforms = Windows, Linux, Mac OS X
keywords = jupyter ypy

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  setuptools
  y-py >=0.5.3,<0.6.0
  ypy-websocket >=0.3.1,<0.4.0

[options.extras_require]
test =
  pre-commit
  pytest
  pytest-asyncio
  websockets >=10.0

[options.entry_points]
jupyter_ydoc =
    file = jupyter_ydoc.ydoc:YFile
    notebook = jupyter_ydoc.ydoc:YNotebook

[flake8]
max-line-length = 100
